# luna9

./: .flake8  .gitignore  .pylintrc  AGENTS.md  LICENSE  README.md  benchmark_comprehensive.py  benchmark_hash.py  debug_hash.py  debug_hash2.py  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  semantic_relationship_analyzer.py  test_append.py  test_domain.py  test_domain_manager.py  test_domain_query_debug.py  test_harness_quick.py  test_hash_accuracy.py  test_hash_init.py  test_luna9_functionality.py  test_security_validation.py
.github/: FUNDING.yml
docs/: ARCHITECTURE.md  api_reference.md  client_architecture.md  geometric_relationship_inference.md  hash_bucketing.md  schema_v1_map.md  session_model_v1.md
landing/: about.html  blog.html  desktop-mockup.css  desktop-mockup.js  index.html  style.css  styles.css  terminal-demo.css  terminal-demo.js
luna9-python/: .gitignore  README.md  pyproject.toml  setup.py  test_hash_index_issue.py  test_risk_formulas.py  test_security_dx.py
luna9-python/docs/: SECURITY_ARCHITECTURE.md
luna9-python/examples/: memory_harness_demo.py
luna9-python/luna9/: __init__.py  baseline.py  domain.py  domain_manager.py  hash_index.py  memory_harness.py  performance.py  security.py  semantic_surface.py  surface_math.py  surface_math_fast.py
luna9-python/luna9/components/: __init__.py  domain.py  domain_manager.py  semantic_analysis.py
luna9-python/luna9/core/: __init__.py  hash_index.py  semantic_surface.py  surface_math.py
luna9-python/luna9/initiative/: __init__.py  boundaries.py  dual_mode.py  flow_suppressor.py  integration.py  lmix.py  possibilities.py  state.py
luna9-python/luna9/integrations/: __init__.py  gutenberg.py  openrouter.py
luna9-python/luna9/labeling/: geometry_extractor.py  pipeline.py
luna9-python/luna9/storage/: __init__.py
luna9-python/luna9/utils/: __init__.py  chunking.py  performance.py
luna9-python/luna9/utils/labeling/: __init__.py  clustering.py  geometry_extractor.py  parquet_utils.py  pipeline.py  visualization.py
luna9-python/tests/: conftest.py  test_boundaries.py  test_chunking.py  test_domain_manager.py  test_hash_index.py  test_lmix.py  test_memory_harness.py  test_possibilities.py  test_security.py  test_semantic_surface.py  test_state.py
luna9-python/tests/fixtures/: __init__.py  security_examples.py
luna9-python/tests/integration/: test_all_models.py  test_choir_mode.py  test_dual_mode_integration.py  test_ensemble_cognition.py  test_flow_suppression.py  test_flow_suppression_multi_book.py  test_flow_suppressor_integration.py  test_multiturn.py  test_multiturn_logged.py  test_retrieval_integration.py  test_single_question.py  test_surface_narrative_structure.py
migrations/: 0001_initial.sql
proof_of_concept/: README.md  baseline.py  demo_comparison.py  demo_dual_retrieval.py  demo_path_curvature.py  generate_synthetic_data.py  requirements.txt  semantic_surface.py  surface_math.py  test_semantic_surface.py  test_surface.py  trim_conversations.py  validate_synthetic.py
tests/: conftest.py  test_cli.py  test_domain.py  (+4 more)
(+22 files in other folders)
