[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "luna9"
version = "0.1.0"
description = "CLI agentic coding harness that learns and grows."
authors = [{ name = "AJ Gonzalez" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0,<1.0.0",
]

[project.scripts]
luna9 = "luna9.cli:main"

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
